--- a/tox.ini
+++ b/tox.ini
@@ -1,12 +1,12 @@
 [tox]
-envlist = coverage-clean,py27,py33,py34,py35,pypy,docs,coverage
+envlist = coverage-clean,py38,py39,py310,py311,docs,coverage
 skipsdist = true
 
 [testenv]
 deps = -r{toxinidir}/requirements.txt
 commands =
        #python {toxinidir}/savReaderWriter/cWriterow/setup.py build_ext --inplace
-       nosetests --cover-html-dir=unit_tests/coverage-{envname}
+       nose2 --coverage=unit_tests/coverage-{envname} --coverage-report=html
 setenv = 
        PYTHONWARNINGS = ignore
        SAVRW_DISPLAY_WARNS = ignore
@@ -18,7 +18,7 @@ passenv =
 [testenv:pypy]
 deps = -r{toxinidir}/dev-requirements.txt
 commands =
-       nosetests --cover-html-dir=unit_tests/coverage-{envname}
+       nose2 --coverage=unit_tests/coverage-{envname} --coverage-report=html
 #install_command = 
 #       pip install git+https://bitbucket.org/pypy/numpy.git {packages}
 setenv = 
@@ -30,7 +30,7 @@ passenv =
        LANG 
       
 [testenv:docs]
-basepython = python2.7
+basepython = python3.8
 changedir = savReaderWriter/documentation
 deps = 
        sphinx
@@ -40,16 +40,14 @@ commands =
        sphinx-build -b html -d {envtmpdir}/doctrees . {envtmpdir}/html
 
 [testenv:coverage-clean]
-deps = coverage==3.7.1
-#deps = coverage==4.1b2
+deps = coverage==7.2.3
 skip_install = false
 commands = coverage erase
 setenv = 
        COVERAGE_FILE = .coverage
 
 [testenv:coverage]
-deps = coverage==3.7.1
-#deps = coverage==4.1b2
+deps = coverage==7.2.3
 skip_install = false
 commands =
        coverage debug sys
