--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,12 +6,14 @@ jobs:
 
   tests:
 
-    runs-on: ubuntu-latest
-    timeout-minutes: 10
+    timeout-minutes: 40
 
     strategy:
       matrix:
+        os: [ubuntu-latest, windows-latest]
         python-version: ['3.7']
+
+    runs-on: ${{ matrix.os }}
 
     steps:
     - uses: actions/checkout@v2
