--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -5,8 +5,7 @@ graft savReaderWriter/test_data
 graft savReaderWriter/spssio
 graft savReaderWriter/util
 include ez_setup.py
-include VERSION
-include COPYRIGHT
+include LICENSE.txt
 global-exclude *.pyc *.*~ *~
 prune .git
 include versioneer.py
