--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,10 +23,10 @@ jobs:
       with:
         python-version: ${{ matrix.python-version }}
         cache: pip
-        cache-dependency-path: requirements.txt
+        cache-dependency-path: pyproject.toml
 
     - name: Install Python package and dependencies
-      run: pip install -r requirements.txt
+      run: pip install .[dev]
 
     - name: Run pytest
       run: pytest -sv
